# Deceiver

./: README.md
backend/: agents.py  graph.py  main.py  models.py  nodes.py  prompts.py  pyproject.toml  requirements.txt  state_manager.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css  utils.js
frontend/src/components/: Typewriter.jsx
frontend/src/pages/: CharacterSelectPage.jsx  GameOverPage.jsx  GamePage.jsx  LandingPage.jsx  NightPhasePage.jsx  RulesPage.jsx  VoteResultPage.jsx  VotingPage.jsx
